# Mado

./: .gitignore  AGENTS.md  README.md  UPDATE.md  index.html  package-lock.json  package.json  start-mado.bat
app/: vite.config.ts
app/src/: App.tsx  styles.css  tauri.ts  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: codex_agent.rs  codex_trust.rs  lib.rs  main.rs
docs/: ICON.md
src/: styles.css  tauri.ts  types.ts
src-tauri/: tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
