[package]
name = "mado"
version = "0.1.0"
description = "A compact desktop AI assistant for quick questions, translation, and safe file previews."
authors = ["hajime"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "mado_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
